# uva

uva_10008/: main.cpp  test.cpp
uva_10191/: main.cpp  test.cpp
uva_10191/test_case/: test1.txt  test2.txt
uva_10377/: main.cpp  test.cpp
uva_10954/: .main.cpp.swp  CMakeLists.txt  main  main.cpp  test  test.cpp
uva_131/: main.cpp  test.cpp
uva_131/test_case/: test.txt
uva_246/: main.cpp  test.cpp
uva_263/: CMakeLists.txt  NumberChains.h  test.cpp  uva263_NumberChains.cpp
uva_514/: main.cpp  test.cpp
uva_514/test_case/: test1.txt
uva_608/: CMakeLists.txt  main  main.cpp  test.cpp
